2004-06-15 Tanya Wolff
	Removed intermediate composites to allow groupings to be readable by screenreader in the Manage Configuration dialog.
	
2004-03-16 Tanya Wolff
	Marked remaining strings forming keys, directories and filenames untranslatable.

2004-03-03 James Ciesielski
	Marked those strings that are non-translatable as such and externalized 
	those strings that can be translated.

	* src/org/eclipse/cdt/managedbuilder/internal/ui/ManagedBuilderHelpContextIds.java
	* src/org/eclipse/cdt/managedbuilder/internal/ui/ManagedBuilderUIPlugin.java
	* src/org/eclipse/cdt/managedbuilder/internal/ui/PluginResources.properties
	* src/org/eclipse/cdt/managedbuilder/ui/properties/BrowseEntryDialog.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/BuildPropertyPage.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/BuildToolsSettingsStore.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/ManagedConfigDialog.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/NewConfigurationDialog.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/SummaryFieldEditor.java
	* src/org/eclipse/cdt/managedbuilder/ui/properties/ToolListLabelProvider.java
	* src/org/eclipse/cdt/managedbuilder/ui/wizards/NewManagedCProjectWizard.java
	* src/org/eclipse/cdt/managedbuilder/ui/wizards/NewManagedProjectWizard.java

2004-03-02 Sean Evoy
	Work to support new feature C1, "Set Tool Command in Project". 
	Created a new preference page that has a single string field editor 
	(for now) to edit the tool command. There is an externalized string 
	for the label. Now that there are preference pages for tools and for 
	options, and both are managed by the property page, the common logic 
	for both preference pages have been refactored into a superclass. 
	
	In the property page, there is now logic for remembering what tool 
	has been selected as well as what option. The property page now 
	creates preference pages for tools and options.
	